# AutoNOMOS

./: .gitignore  Probabilistic.md  README.md  autonomos.gv  autonomos_model.sdf  frenar.sh  histogramfilter.txt  histogramfilter_filtrado.txt  histogramfilter_filtrado_corregida_velocidad_int_trapezoidal.txt  histogramfilter_filtrado_int_rect_mala_est_velocidad.txt  log1.txt  log2.txt  model_out.urdf  pruebas_finales_tesis.txt
data/: data_BANG_BANG_08-08-18_223543.txt  data_BANG_BANG_10-08-18_155810.txt  data_BANG_BANG_10-08-18_165916.txt  data_aux_BANG_BANG_08-08-18_223543.txt  data_aux_BANG_BANG_10-08-18_155810.txt  plots.gnu  script_single_mp.sh  script_tests.sh
data/goal_n1n9/: comp_time_goal_n1n9.eps  data_04-08-18_011457.txt  data_BANG_BANG_08-08-18_223543.txt  data_aux_n1n9_DIRT-BANG_BANG_24-08-18_145458.txt  data_aux_n1n9_DIRT_22-08-18_221318.txt  data_n1n9_DIRT-BANG_BANG_24-08-18_145458.txt  data_n1n9_DIRT_22-08-18_221318.txt  multiplotgoal_n1n9.eps  nodes_goal_n1n9.eps  sln_q_goal_n1n9.eps  valid_slngoal_n1n9.eps
data/goal_n1p9/: comp_time_goal_n1p9.eps  data_01-08-18_180428.txt  data_aux_01-08-18_180428.txt  data_aux_BANG_BANG_10-08-18_165916.txt  data_aux_n1p9_DIRT-BANG_BANG_28-08-18_213308.txt  data_aux_n1p9_DIRT_23-08-18_152608.txt  data_n1p9_DIRT-BANG_BANG_28-08-18_213308.txt  data_n1p9_DIRT_23-08-18_152608.txt  multiplotgoal_n1p9.eps  nodes_goal_n1p9.eps  sln_q_goal_n1p9.eps  valid_slngoal_n1p9.eps
data/goal_n4p3/: comp_time_goal_n4p3.eps  data_aux_n4p3_DIRT-BANG_BANG_25-08-18_161057.txt  data_aux_n4p3_DIRT-RANDOM_CTRL_23-08-18_193059.txt  data_aux_n4p3_RANDOM_CTRL_16-08-18_121540.txt  data_n4p3_DIRT-BANG_BANG_25-08-18_161057.txt  data_n4p3_DIRT-RANDOM_CTRL_23-08-18_193059.txt  data_n4p3_RANDOM_CTRL_16-08-18_121540.txt  multiplotgoal_n4p3.eps  nodes_goal_n4p3.eps  sln_q_goal_n4p3.eps  valid_slngoal_n4p3.eps
data/goal_n6n4/: comp_time_goal_n6n4.eps  data_31-07-18_195547.txt  data_aux_n6n4_BANG_BANG_13-08-18_130853.txt  data_aux_n6n4_DIRT-BANG_BANG_25-08-18_163527.txt  data_aux_n6n4_DIRT-RANDOM_CTRL_24-08-18_151547.txt  data_aux_n6n4_RANDOM_CTRL_14-08-18_204155.txt  data_n6n4_BANG_BANG_13-08-18_130853.txt  data_n6n4_DIRT-BANG_BANG_25-08-18_163527.txt  data_n6n4_DIRT-RANDOM_CTRL_24-08-18_151547.txt  data_n6n4_RANDOM_CTRL_14-08-18_204155.txt  multiplotgoal_n6n4.eps  nodes_goal_n6n4.eps  script_single_mp.sh  sln_q_goal_n6n4.eps  valid_slngoal_n6n4.eps
debug python/: Pruebas de velocidad.ipynb  checking odometry.ipynb  localization.ipynb  sintonizar ks.ipynb
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
docker/kinetic-gazebo-intel/: Dockerfile
docker/ros-docker-gazebo/: Dockerfile  Readme.md
ejecuciones/: logErick.txt  logErick02.txt  logErick023.txt
images/: comparativa_odometria.xcf  road_discretization.xcf  sensing_first_steps.xcf  speed_test.xcf
images/sintonizar ks/: sintonizar_ks.xcf  sintonizar_ks_punto.xcf
line_det/devel/: .catkin  _setup_util.py  setup.bash  setup.sh  setup.zsh
src/: histogramfilter.txt
src/Gazebo_plugin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  autonomos_plugin.cc  cmake_install.cmake
src/autonomos_description/: CMakeLists.txt  package.xml  urdf.rviz
src/autonomos_description/launch/: camino_derecho_original.launch  visualization_example_rviz.launch  visualization_in_rviz.launch
src/autonomos_description/urdf/: autonomos.gazebo  autonomos.xacro  autonomos_backup.urdf  camino_circuito.world  camino_derecho.world  camino_s.world
src/autonomos_description/urdf/models/circuit2way_oval/: model-1_4.sdf  model.config
src/autonomos_description/urdf/models/circuit2way_s/: model-1_4.sdf  model.config
src/autonomos_description/urdf/models/circuit2way_scaled/: model.config
src/autonomos_description/urdf/models/circuit2way_scaled/meshes/: circuit_2way.dae
src/autonomos_description/urdf/models/circuit2way_straight/: model-1_4.sdf  model.config
src/autonomos_gazebo/: CMakeLists.txt  package.xml
src/autonomos_gazebo/config/: autonomos_gazebo_control.yaml
src/autonomos_gazebo/launch/: autonomos_camino_circuito.launch  autonomos_camino_derecho.launch  autonomos_camino_ovalo.launch  autonomos_camino_s.launch  autonomos_empty.launch  autonomos_world.launch  empty_autonomous.launch  straight_road.launch  visualization_in_rviz.launch
src/autonomos_gazebo/models/circuit2way_oval/: model-1_4.sdf
src/autonomos_gazebo/models/circuit2way_s/: model-1_4.sdf
src/autonomos_gazebo/models/circuit2way_scaled/: model-1_4.sdf  model.config  model.sdf
src/autonomos_gazebo/models/circuit2way_straight/: model-1_4.sdf  model.sdf
src/autonomos_gazebo/models/circuit2way_straight/meshes/: circuit_straight.dae
src/autonomos_gazebo/worlds/: camino_camara.world  camino_derecho.world  camino_ovalo.world  camino_s.world
src/autonomos_gazebo_control/: CMakeLists.txt  package.xml
src/autonomos_gazebo_simulation/: CMakeLists.txt
src/autonomos_setup_tf/: CMakeLists.txt  (+1 more)
src/firulais/: CMakeLists.txt  PIDcontroller.cpp  PIDcontroller_sim.cpp  TrabajaConlaImagen.cpp  perception_node.cpp  velocity_node.cpp
src/firulais/launch/: controller.launch
src/imagen/: CMakeLists.txt  DisplayImage.cpp  PIDcontroller.cpp  PIDcontroller_sim.cpp  TrabajaConlaImagen.cpp  package.xml
src/imagen/launch/: controller.launch  controller_evitar.launch  controller_sim.launch  simulation.launch
src/imagen_ackermann/: CMakeLists.txt  DisplayImage.cpp  PIDcontroller_sim.cpp  package.xml
src/imagen_ackermann/launch/: controller_evitar.launch
src/lane_controller/: .PIDcontroller.cpp.swp  CMakeLists.txt  PIDcontroller.cpp  PIDtuner.cpp  package.xml
src/lane_controller_sim/: CMakeLists.txt  PIDcontroller_lane_sim.cpp  PIDcontroller_sim.cpp  package.xml
src/lane_controller_sim/launch/: controller.launch
src/lane_planning/: CMakeLists.txt  lane_planning.cpp  lane_planning_prob.cpp  package.xml
src/teleop/: CMakeLists.txt  drive_base.cpp  package.xml
src/translate_sim_real/: CMakeLists.txt  package.xml  translate_sim_real.cpp
src/translate_sim_real/launch/: real_car.launch  sim_seat.launch  simulation.launch
(+378 files in other folders)
