<?xml version="1.0"?>
<package>

  <name>autonomos_description</name>
  <version>0.0.0</version>
  <description>The autonomos_description package</description>

  <maintainer email="eduardodsat@hotmail.com">Eduardo Martínez</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
