<?xml version="1.0"?>
<package>
  <name>autonomos_gazebo</name>
  <version>0.0.0</version>
  <description>The autonomos_gazebo package</description>

  <maintainer email="eduardodsat@hotmail.com">Eduardo Martínez</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autonomos_description</build_depend>
 <!--  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend> -->
  
  <run_depend>autonomos_description</run_depend>
<!--  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend> -->
  
  <!--
  <build_depend>gazebo_ros_control</build_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  -->

</package>
